#21 Fixed link button alignment
Also cleaned button styles and added button bar component

--- a/scss/objects/_objects.button-bare.scss
+++ b/scss/objects/_objects.button-bare.scss
@@ -5,21 +5,5 @@
 // like text.
 
 .o-button-bare {
-	display: inline-block;
-	color: inherit;
-	background-color: transparent;
-	font: inherit;
-	text-align: left;
-	text-decoration: none;
-	vertical-align: middle;
-	border: none;
-	border-radius: 0;
-	margin: 0;
-	padding: 0;
-	cursor: pointer;
-	transition: 0;
-	box-shadow: none;
-	-webkit-appearance: none;
-	   -moz-appearance: none;
-	        appearance: none;
+	@include button-bare();
 }
